cli/tests/testdata/test/markdown_windows.out
Check [WILDCARD]/test/markdown_windows.md$11-14.js
Check [WILDCARD]/test/markdown_windows.md$17-20.ts
Check [WILDCARD]/test/markdown_windows.md$33-36.ts
Check [WILDCARD]/test/markdown_windows.md$37-40.ts
error: TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const a: string = 42;
      ^
    at [WILDCARD]/test/markdown_windows.md$37-40.ts:1:7

TS2322 [ERROR]: Type 'number' is not assignable to type 'string'.
const a: string = 42;
      ^
    at [WILDCARD]/test/markdown_windows.md$33-36.ts:1:7

Found 2 errors.